# eag-v2-s10

./: .gitignore  .last_session_id  ARCHITECTURE.md  RAG_RETRIEVAL_ANALYSIS.py  README.md  TAVILY_TEST_SUMMARY.py  agent_state.py  ai_agent_simulated_conversation.json  answer_from_llm.py  architecture.md  build_document_index.py  check_pdf_content.py  check_python.py  conversation_logger.py  coordinator.py  debug_executor.py  debug_output.txt  decision_agent.py  diagnose_web_search_error.py  executor_agent.py  faiss_search_results.txt  init_memory_index.py  io_handler.py  llm_integration_architecture.md  main.py  memory_agent.py  perception_agent.py  pyproject.toml  rebuild_index.py  response_agent.py  retriever_agent.py  server.py  show_ddg_error.py  test_ddg_direct.py  test_dual_faiss.py  test_executor_logic.py  test_faiss_search.py  test_iterative_debug.py  test_mcp_server_start.py  test_memory_system.py  (+4 more)
action/: executor.py
agents/: __init__.py  decision_agent.py  executor_agent.py  memory_agent.py  retriever_agent.py
config/: mcp_server_config.yaml
logs/: conversation_20251123_073724.json
mcp_servers/: mcp_server_1.py  mcp_server_2.py  mcp_server_3.py  mcp_server_4.py  models.py  multiMCP.py  test_subprocess_env.py
memory_utils/: __init__.py  auto_init_indices.py  init_memory_index.py  memory_validator.py  reset_memory.py  session_memory.py
simulator/: REPORT_DETAILS.md  REPORT_STATS.md  generate_markdown_report.py  generate_markdown_reports.py  generate_reports_only.py  report_details.html  report_generator.py  report_stats.html  run_tests.py  (+2 more)
(+6 files in other folders)
